testdata/baselines/reference/submodule/compiler/unusedTypeParameterInInterface1.errors.txt
unusedTypeParameterInInterface1.ts(1,15): error TS6196: 'T' is declared but never used.


==== unusedTypeParameterInInterface1.ts (1 errors) ====
    interface int<T> {
                  ~
!!! error TS6196: 'T' is declared but never used.
    
    }